# lazydap

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md  TODO.md  book-chain.toml
.github/workflows/: ci.yml  release.yml
.skills/: VERSION
.skills/teaching/: README.md  SKILL.md
crates/core/: Cargo.toml
crates/daemon/: Cargo.toml
crates/daemon/examples/: m0_hello_adapter.rs  m1_read_one_message.rs  m2_initialize.rs
crates/daemon/src/: main.rs
crates/dap/: Cargo.toml
crates/dap/src/: lib.rs  transport.rs  types.rs
docs/articles/: agent-driven-debugging.md  the-cli-is-the-product.md  yes-its-a-wrapper.md
docs/blueprint/: 00-overview.md  01-architecture.md  02-data-model.md  03-adapters.md  04-protocol.md  05-sessions.md  06-cli.md  07-tui.md  08-state-and-config.md  09-skill.md  10-async-to-sync.md  11-state-of-the-art.md  12-ai-future.md  13-open-source.md  14-roadmap.md  15-decision-log.md  16-addendum.md
docs/book/: 00-introduction.md  00b-what-is-lazydap.md  00c-why-i-built-this.md  01-cargo-workspaces.md  02-tokio-main-clap.md  03-conventions-as-code.md  04-hello-adapter.md  05-read-one-message.md  06-serde-typed-protocols.md  07-dap-transport-and-seq.md  08-event-streaming.md  09-dap-launch-dance.md  10-full-handshake-order.md  11-first-real-breakpoint.md  12-protocol-crate-ipc-envelope.md  13-length-prefixed-json-codec.md  14-unix-sockets-accept-loop.md  15-auto-spawning-daemon.md  16-wire-launch-end-to-end.md  17-stepping-commands.md  18-wait-design.md  19-inspection-commands.md  22-hello-ratatui.md  (+20 more)
(+55 files in other folders)
